--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 Software Engineer<br />Frontend Developer<br />Programmer
             </span>
             <button>
-                Ini Button
+                Ini Button sudah fix jadi
             </button>
         </div>
         <div class="personal">
