--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="small-container">
                 <span class="red-title">
-                    Areas of Expertise
+                    Areas of Skills
                 </span>
                 <span>
                     HTML, CSS, Javascript, React JS, Next JS, Redux, GraphQL, Tailwind  
