Tambahan button baru

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <button>
                 Ini Button sudah fix jadi
             </button>
+            <button>
+                Ini Button yang baru
+            </button>
         </div>
         <div class="personal">
             <div class="small-container">
