--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="profile">
             <h1 class="title">
-                Alif <br/> Azmi Siregar
+                Nama saya alif siregar
             </h1>
             <img class="my-photo" src="./assets/IMG_4906.jpg" />
             <span class="subtitle">
