--- a/index.html
+++ b/index.html
@@ -11,18 +11,12 @@
     <div class="container">
         <div class="profile">
             <h1 class="title">
-                Nama saya alif siregar
+                Fauzan Dizki Alif Azmi Siregar
             </h1>
             <img class="my-photo" src="./assets/IMG_4906.jpg" />
             <span class="subtitle">
                 Software Engineer<br />Frontend Developer<br />Programmer
             </span>
-            <button>
-                Ini Button sudah fix jadi
-            </button>
-            <button>
-                Ini Button yang baru
-            </button>
         </div>
         <div class="personal">
             <div class="small-container">
